--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p class="space">Sports</p>
         <p class="space">Activities</p>
     </div>
-    <img src="./images/m-bg.jpg" alt="" class="img">
+    <img src="./images/bigscreen.jpg" alt="" class="img">
     <div class="heading">
         Movies
     </div>
@@ -55,11 +55,12 @@
             <button class="language">Punjabi</button>
     </div>
     <div class="poster-box">
-    <img src="./images/stree-2.avif" alt="" class="movie-poster">
-    <img src="./images/khel khel me.avif" alt="" class="movie-poster">
-    <img src="./images/vikramaarka.avif" alt="" class="movie-poster">
-    <img src="./images/ae dada re.avif" alt="" class="movie-poster">
-    <img src="./images/crow.avif" alt="" class="movie-poster">
+    <img src="./images/movie-posters/stree-2.avif" alt="" class="movie-poster">
+    <img src="./images/movie-posters/khel-khel-me.avif" alt="" class="movie-poster">
+    <img src="./images/movie-posters/vikramaarka.avif" alt="" class="movie-poster">
+    <img src="./images/movie-posters/ae-dada-re.avif" alt="" class="movie-poster">
+    <img src="./images/movie-posters/crow.avif" alt="" class="movie-poster">
+    <img src="./images/movie-posters/diary-of-wb.avif" alt="" class="movie-poster">
     </div>
 
 </body>
